[gd_scene load_steps=4 format=3 uid="uid://damfq04ajowss"]

[ext_resource type="Script" path="res://debug_window.gd" id="1_thmsn"]
[ext_resource type="Script" path="res://AgentSelector.gd" id="2_cwkko"]
[ext_resource type="Script" path="res://ActionData.gd" id="2_nor2t"]

[node name="DebugWindow" type="Window"]
transparent_bg = true
title = "Debug Data"
position = Vector2i(840, 36)
size = Vector2i(300, 600)
script = ExtResource("1_thmsn")

[node name="Control" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="AgentSelector" type="HBoxContainer" parent="Control"]
layout_mode = 2
script = ExtResource("2_cwkko")

[node name="ObsData" type="VBoxContainer" parent="Control"]
layout_mode = 2
alignment = 1

[node name="ActionData" type="VBoxContainer" parent="Control"]
layout_mode = 2
alignment = 1
script = ExtResource("2_nor2t")
